fix: bullet points are cut off in chrome

--- a/src/theme/pages/checkout/shopping-cart.scss
+++ b/src/theme/pages/checkout/shopping-cart.scss
@@ -256,7 +256,7 @@
 
 .pli-description {
   ul {
-    padding-left: $space-default;
+    padding-left: $space-default/3 * 4;
     list-style-position: outside;
   }
 
